--- a/terrorism_slides.html
+++ b/terrorism_slides.html
@@ -103,13 +103,13 @@ class: center
 class: center
 # Target of Incident
 .left[
-- Nore does the target of the incident.]
+- Nor does the target of the incident.]
 
 ![](fig3b.pdf)&lt;!-- --&gt;
 
 ---
 class: center
-# The Political Purposiveness of the Perpetrator
+# Political Purposiveness of the Perpetrator
 .left[
 - Two main themes: acts carried out by collectives are more likely to be considered terrorism than those carried out by individuals and acts carried out by individuals with a history of mentall illness are less likely to be seen as terrorism.]
 
@@ -119,7 +119,7 @@ class: center
 class: center
 # Social Categorization Effects
 .left[
-- Details regarding social categorization of the perpetrator of an incident impact how the incident is perceived.
+- Details regarding social categorization of the perpetrator slightly impact how the incident is perceived.
 ]
 
 ![](fig5.pdf)&lt;!-- --&gt;
@@ -133,18 +133,22 @@ class: center
 ![](fig6.pdf)&lt;!-- --&gt;
 
 ---
+class: center
 # Applications
 
+.left[
 - Mapping onto Real-World Events
 
 - Demonstrating Framing Effects
 
 - Analyzing Media Coverage 
-
+]
 ---
+class: center
+
 
 # Conclusion
-
+.left[
 - Terrorism vs. "small" forms of violence
 
 - Objective and subjective criteria have fairly equal impacts on the public's understanding of acts of terrorism.
@@ -152,10 +156,14 @@ class: center
 - The media has a significant role in influencing how the public classifies violent events. 
 
 - Terrorism is not exclusive to targeting civilians, nor does it always entail political motivations. 
-
+]
 ---
 
+class: center
+
+
 # Possible Extensions
+.left[
 - Examine competing media frames
 
 - Additional analysis of media coverage, specifically pertaining to ratings and coverage of perpetrators 
@@ -163,6 +171,7 @@ class: center
 - Explore political frames
 
 - Comparison with foreign public perceptions
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
